--- a/CFP.App/Formularios/Financeiros/Consultas/ucConsultaContas.xaml
+++ b/CFP.App/Formularios/Financeiros/Consultas/ucConsultaContas.xaml
@@ -40,7 +40,8 @@
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Botão para sair da tela" Margin="1,0,2,5" Click="btSair_Click">
+                    ToolTip="Botão para sair da tela"
+                    Click="btSair_Click">
                 <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
@@ -70,7 +71,7 @@
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Botão pagar, pode ser tudo ou selecionados">
+                    ToolTip="Realiza o pagamento rápido, definindo a forma de pagamento padrão nas configurações" Click="btPagar_Click">
                 <materialDesign:PackIcon 
                     Kind="CashCheck"  
                     Width="50" 
@@ -80,20 +81,22 @@
             <DatePicker x:Name="dtpInicio"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        FontSize="10"
+                        FontSize="12"
+                        materialDesign:HintAssist.Hint="Incio" 
                         Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
                         KeyDown="dtpInicio_KeyDown"
                         VerticalAlignment="Top"
-                        Margin="5 2 5 0"/>
+                        Margin="5 -4 5 1"/>
 
             <DatePicker x:Name="dtpFinal"
                         Grid.Column="0"
                         Grid.ColumnSpan="2"
-                        FontSize="10"
+                        FontSize="12"
+                        materialDesign:HintAssist.Hint="Final" 
                         Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
                         KeyDown="dtpFinal_KeyDown"
                         VerticalAlignment="Bottom"
-                        Margin="5 0 5 0"/>
+                        Margin="5 0 5 1"/>
 
             <ComboBox x:Name="cmbTipoConta"
                       Grid.Column="2"
@@ -171,7 +174,7 @@
             <Grid Margin="20 5 20 50">
                 <DataGrid x:Name="dgContasFiltradas"  
                            AutoGenerateColumns="False"                                        
-                           Background="white" IsReadOnly="True" >
+                           Background="white" IsReadOnly="True" MouseDoubleClick="dgContasFiltradas_MouseDoubleClick" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Tipo" Binding="{Binding Conta.TipoConta}" />
                         <DataGridTextColumn Header="Código" Binding="{Binding Conta.Codigo}" />
